--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>事故e处理-视频查勘定损平台</title>
     <script type="text/javascript" src="/static/swfobject.js"></script>
+
+    <script src="/static/jquery-1.8.0.min.js" type="text/javascript"></script>
+    <script src="/static/jquery.json-2.3.min.js" type="text/javascript"></script>
+    <script src="/static/reconnecting-websocket.min.js" type="text/javascript"></script>
+    <script src="/static/websocket.js" type="text/javascript"></script>
+    <script src="/static/cti-utils.js" type="text/javascript"></script>
+    <script src="/static/xncti-websocket.js" type="text/javascript"></script>
+    <script src="/static/sip-0.7.8.js"></script>
+    <script src="/static/japp.js"></script>
   </head>
   <body>
     <div id="app"></div>
