key:添加热力图和修改案件修改bug

--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
-  <script type="text/javascript" src="https://api.map.baidu.com/api?v=2.0&ak=5XEujPsPkwedOS4unPt8nmvCYwznAbW4&callback=initMap"></script>
+  <script type="text/javascript" src="https://api.map.baidu.com/api?v=2.0&ak=5XEujPsPkwedOS4unPt8nmvCYwznAbW4"></script>
+  <!-- <script src="/static/BMapLib.js"></script> -->
+  <script type="text/javascript" src="http://api.map.baidu.com/library/TextIconOverlay/1.2/src/TextIconOverlay_min.js"></script>
+  <script type="text/javascript" src="http://api.map.baidu.com/library/MarkerClusterer/1.2/src/MarkerClusterer_min.js"></script>
   <script>
   </script>
 </html>
